Sun Aug 22 16:09:49 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkliststore.h (struct _GtkListStore): 
	* gtk/gtkliststore.c (gtk_list_store_init): 
	* gtk/gtkliststore.c (gtk_list_store_insert): 
	* gtk/gtkliststore.c (gtk_list_store_remove): 
	Restore length field; PyGTK and maybe others use it directly.

Sun Aug 22 15:46:56 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkpaned.c (gtk_paned_class_init):
	s/CYCLE_HANDLE_FOCUS/CYCLE_CHILD_FOCUS/

	* gtk/gtkfontbutton.c (gtk_font_button_class_init):
	s/PROP_SHOW_SIZE/PROP_SHOW_STYLE/

	Both pointed out by Tommi Komulainen.

Sun Aug 22 13:44:53 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkpaned.c (gtk_paned_class_init): Use PROP_MAX_POSITION,
	not PROP_MIN_POSITION for the max_position property. Fix pointet
	out by Tommi Komulainen.

Sun Aug 22 13:32:33 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkliststore.c (gtk_list_store_insert): Normalize the
	position so we don't create paths with off-list
	indices. (#150320).

Sun Aug 22 12:04:59 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkliststore.c (gtk_list_store_sort_iter_changed): Use the
	correct tree path (#150289, Morten Welinder).

Sun Aug 22 00:08:44 2004  Matthias Clasen  <maclas@gmx.de>

	Fix #150406, reported by Fernando San Martín Woerner, patch
	by Gustavo Carneiro.
	
	* gtk/gtkentrycompletion.c 
	(gtk_entry_completion_default_completion_func): Check that 
	column is of type G_TYPE_STRING before proceeding.

Sat Aug 21 23:52:13 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreestore.c (gtk_tree_store_swap): Don't use an 
	uninitialized tree iter.  (#150414, Torsten Schoenfeld)

Sat Aug 21 23:29:54 2004  Matthias Clasen  <maclas@gmx.de>

	Fix #150738, Tomislav Jonjic.
	
	* gtk/gtktoolitem.h (GTK_IS_TOOL_ITEM_CLASS): 
	* gtk/gtktoolbutton.h (GTK_IS_TOOL_BUTTON_CLASS): 
	* gtk/gtktoggleaction.h (GTK_IS_TOGGLE_ACTION_CLASS): 
	* gtk/gtkseparatortoolitem.h (GTK_IS_SEPARATOR_TOOL_ITEM_CLASS): 